back to fully custom themes. fixing walker pending.

--- a/default/hypr/bindings/utilities.conf
+++ b/default/hypr/bindings/utilities.conf
@@ -4,8 +4,8 @@ bind = SUPER, slash, exec, ~/.local/share/autarky/bin/autarky-menu-keybindings
 
 # Aesthetics
 bind = SUPER, SPACE, exec, pkill -SIGUSR1 waybar
-bind = SUPER CTRL, SPACE, exec, zsh -ic '~/.local/share/autarky/bin/autarky-theme-bg-next'
-bind = SUPER SHIFT CTRL, SPACE, exec, zsh ~/.local/share/autarky/bin/autarky-theme-next
+bind = SUPER SHIFT CTRL, SPACE, exec, zsh -ic '~/.local/share/autarky/bin/autarky-theme-bg-next'
+bind = SUPER CTRL, SPACE, exec, zsh -ic '~/.local/share/autarky/bin/autarky-theme-next'
 
 # Notifications
 bind = SUPER, comma, exec, makoctl dismiss
